changed a few to do comments

--- a/test_accuracy_paper/test_accuracy_appendix.tex
+++ b/test_accuracy_paper/test_accuracy_appendix.tex
@@ -11,7 +11,7 @@ Here, we derive Eqn.~(\ref{eqn:basic_relation}) in the special case of very smal
 As 
 %%$\alpha \rightarrow 1$, 
 $\mu \rightarrow 1$, 
-\michael{$\mu$ or $\alpha$, clarify and be consistent with appendix.}
+\michael{$\mu$ or $\alpha$, and $0$ or $1$, clarify and be consistent with main text.}
 for an $N \times M$ random matrix $\mathbf{W}$, {with $M=N, Q=1$, and with elements drawn from Eqn.~(\ref{eqn:ht_dstbn}).%
 \footnote{We derive Eqn.~(\ref{eqn:basic_relation}) at what is sometimes pejoratively known as ``at a physics level of rigor.''  That is fine, as our justification ultimately lies in our empirical results.  Recall our goal: to derive a very simple expression relating fitted PL exponents and Frobenius norms that is usable by practical engineers working with state-of-the-art models, i.e., not simply small toy models.  There is very little ``rigorous'' work on HT-RMT, less still on understanding finite-sized effects of HT Universality.  Hopefully, our results will lead to more work along these lines.  }
 That is, we establish this as an asymptotic relation for the VHT Universality class for very small exponents.
@@ -76,8 +76,9 @@ Finally, we can form the Taylor Series for $\dfrac{1}{4/\mu-1}$ around $\mu=1.15
 $$
 \dfrac{1}{4/\mu-1}\bigg\rvert_{\mu=1.15}\approx\dfrac{1}{2}\mu-\dfrac{1}{6}+\cdots\approx\dfrac{1}{2}\mu  .
 $$
-\michael{Check that.}
+\michael{Check that, where we expand around, if we want $\mu\approx 0$.}
 This establishes the approximate---and rather surprising---linear relation we want for $\mu \gtrsim 1$. 
+\michael{Check that, $0$ or $1$.}
 %\michael{MM again, be careful below about $\mu$s and $\alpha$s.}
 
 
