clarified taylor series

--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -401,10 +401,9 @@ Our justification for proposing Eqn.~(\ref{eqn:basic_relation}) is three-fold.
 \begin{enumerate}
 \item
 \label{enum:first}
-We derive Eqn.~(\ref{eqn:basic_relation}) in the special case of very small PL exponent, $\alpha \rightarrow 1$, for an $N\times M$ 
+We derive Eqn.~(\ref{eqn:basic_relation}) in the special case of very small PL exponent, $\alpha \rightarrow 1$ ($\mu\rightarrow 0$), for an $N\times M$ 
 %random 
 matrix $\mathbf{W}^{rand}(\mu)$ (with $N=M$, or $Q=1$).
-\michael{$\mu$ or $\alpha$, and $0$ or $1$, clarify and be consistent with appendix.}
 See Appendix~\ref{sxn:appendix-derivation-pl-norm-relation}.
 \item
 \label{enum:second}
