--- a/test_accuracy_paper/test_accuracy_appendix.tex
+++ b/test_accuracy_paper/test_accuracy_appendix.tex
@@ -12,7 +12,7 @@ As
 %%$\alpha \rightarrow 1$, 
 $\mu \rightarrow 0$, 
 for an $N \times M$ random matrix $\mathbf{W}$, {with $M=N, Q=1$, and with elements drawn from Eqn.~(\ref{eqn:ht_dstbn}).%
-We seek a relation good in the region $mu\in[0,2]$, and will extend the $\mu~0$ results to this.
+We seek a relation good in the region $\mu\in[0,2]$, and will extend the $\mu\sim 0$ results to this.
 \footnote{We derive Eqn.~(\ref{eqn:basic_relation}) at what is sometimes pejoratively known as ``at a physics level of rigor.''  That is fine, as our justification ultimately lies in our empirical results.  Recall our goal: to derive a very simple expression relating fitted PL exponents and Frobenius norms that is usable by practical engineers working with state-of-the-art models, i.e., not simply small toy models.  There is very little ``rigorous'' work on HT-RMT, less still on understanding finite-sized effects of HT Universality.  Hopefully, our results will lead to more work along these lines.  }
 That is, we establish this as an asymptotic relation for the VHT Universality class for very small exponents.
 
@@ -74,20 +74,18 @@ Finally, we can form the Taylor Series for $\dfrac{1}{4/\mu-1}$ around $\mu=1.15
 $$
 \dfrac{1}{4/\mu-1}\bigg\rvert_{\mu=1.15}\approx\dfrac{1}{2}\mu-\dfrac{1}{6}+\cdots\approx\dfrac{1}{2}\mu  .
 $$
-This relation is depicted in Figure~\ref{fig:img/talyor-series}.
-This establishes the approximate---and rather surprising---linear relation we want for $\mu\in[0.2]$ for
+This relation is depicted in Figure~\ref{fig:taylor-series}.
+This establishes the approximate---and rather surprising---linear relation we want for $\mu\in[0,2]$ for
 the VHT Universality class of HT-RMT.
 
 \begin{figure}[!htb]
    \centering
    \includegraphics[scale=0.25]{img/taylor-series.png} 
-   \caption{%
-            Taylor series expansion for $\frac{1}{4/\mu-1}$ at $\mu=1.15\approx1$.
-            }
-   \label{fig:img/taylor-series}
+  \caption{%
+           Taylor series expansion for $\frac{1}{4/\mu-1}$ at $\mu=1.15\approx1$.
+          }
+  \label{fig:taylor-series}
 \end{figure}
-
-
 
 %\paragraph{The PL--Norm Relation: Finite-Size Effects.}
 \section{The PL--Norm Relation: Finite-Size Effects.}
@@ -109,14 +107,14 @@ These numerical results demonstrate that $ \log\Vert\mathbf{W}\Vert^{2}_{F}\appr
 In particular, for MHT matrices, in the finite-size regime, when $N,M\sim\mathcal{O}(100-1000)$, which is typical for modern DNNs, the PL-Norm relations holds, \emph{on average}, quite well. 
 This is precisely what we want in a practical engineering metric that is designed to describe average test accuracy. 
 
-\begin{figure*}[!htb]
+\begin{figure}[!htb]
    \centering
    \includegraphics[scale=0.25]{img/Alpha-LogNorm-Relations.png}
    \caption{
             Numerical test of Eqn.~(\ref{eqn:basic_relation}) for random HT matrices across different HT Universality classes.
            }
    \label{fig:randW}
-\end{figure*}
+\end{figure}
 
 
 %% \michael{Make sure what I include in the above par is enough for what I need here.}
@@ -253,7 +251,7 @@ and larger test accuracy, as predicted by our theory.
 \hline
 Architecture 
  & Model
- & Top 1 Accuracy & $\hat{\alpha} $\\
+ & Top 1 & $\hat{\alpha} $\\
  \hline
  Working Examples & & & \\
  \hline
@@ -321,8 +319,8 @@ FDMobileNet
 \hline
 \end{tabular}
 \end{center}
-\caption{Results for more pre-trained DNN models.  Models provided in the OSMR Sandbox, implemented in pytorch.}
-\label{table:models_more}
+\caption{Results for more pre-trained DNN models.  Models provided in the OSMR Sandbox, implemented in pyTorch. Top 1 refers to the Top 1 Accuracy, which $100.0$ minus the Top 1 reported error.}
+\label{table:models_more}. 
 \end{table}
 
 
