--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -1,6 +1,10 @@
 
+\vspace{-2mm}
+
 \section{Overview of Heavy-Tailed Self-Regularization}
 \label{sxn:theory-review}
+
+\vspace{-1mm}
 
 %In this section, we will briefly review results from Universality that will be relevant for our analylsis.
 We review Martin and Mahoney's Theory of Heavy-Tailed Self-Regularization (HT-SR)~\cite{MM18_TR}.
@@ -306,9 +310,13 @@ We shall use these Universal HT finite-size relations to derive a simple capacit
 %%Appendix~\ref{sxn:appendix-universality}
 
 
+\vspace{-2mm}
+
 %\section{Using Heavy-Tailed Universality}
 \section{Heavy-Tailed Mechanistic Universality and Capacity Control Metrics}
 \label{sxn:theory-new}
+
+\vspace{-1mm}
 
 %\charlesX{\bf{Heavy-Tailed Self-Regularization and Capacity Control Metrics}}
 
