--- a/test_accuracy_paper/test_accuracy_empirical.tex
+++ b/test_accuracy_paper/test_accuracy_empirical.tex
@@ -1,7 +1,9 @@
-%\vspace{-4mm}
+\vspace{-2mm}
 
 \section{Empirical Results on Pre-trained DNNs}
 \label{sxn:emp}
+
+\vspace{-1mm}
 
 Here, we summarize our empirical results for the VGG and ResNet series of models.
 See Appendix~\ref{sxn:appendix-addl-empirical} for additional empirical results on other pre-trained DNN models.
@@ -169,6 +171,9 @@ less then one, $\lambda^{max}<1$.
         }
 \label{table:models_resnet}
 \end{table}
+
+
+\vspace{-1mm}
 
 We next look at the ResNet class of models. 
 See Figure~\ref{fig:resnet} and Table~\ref{table:models_resnet} for a summary of the results.
