a few minor fixes after submit icml and before submit v1 of arxiv

--- a/test_accuracy_paper/dnns.bib
+++ b/test_accuracy_paper/dnns.bib
@@ -2960,6 +2960,19 @@
   year =      {2018},
 }
 
+@TECHREPORT{MM19_shortTR_of_longTR,
+  author =    {C. H. Martin and M. W. Mahoney},
+  title =     {Traditional and Heavy-Tailed Self Regularization in Neural Network Models},
+  number =    {Preprint: arXiv:},
+  year =      {2019},
+}
+
+@TECHREPORT{MM19a_TR,
+  author =    {C. H. Martin and M. W. Mahoney},
+  title =     {Heavy-Tailed {U}niversality Predicts Trends in Test Accuracies for Very Large Pre-Trained Deep Neural Networks},
+  number =    {Preprint: arXiv:},
+  year =      {2019},
+}
 
 @TECHREPORT{ML18_TR,
   author =    {D. Masters and C. Luschi},
