--- a/test_accuracy_paper/test_accuracy_empirical.tex
+++ b/test_accuracy_paper/test_accuracy_empirical.tex
@@ -10,7 +10,7 @@ See Appendix~\ref{sxn:appendix-addl-empirical} for additional empirical results 
 
 We only consider Linear and Conv2D layers because we will only examine series of commonly available, open source, pre-trained DNNs with these kinds of layers. 
 All models have been trained on ImageNet, and reported test accuracies are widely available. 
-Throughout, we use the Test Accuracies for the Top1 errors (where accuracy = 100 - top1 error).
+Throughout, we use the Test Accuracies for the Top1 errors (where Accuracy = 100 - Top1 error).
 We see similar results for the Top5 errors.
 We emphasize that, \emph{for our analysis, we do not need to retrain these models---and we do not even need the test data!}
 
